<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">provider</string>
    <string name="no_activity_msg">You don\'t have any registered  activities yet</string>
    <string name="add_new_activity_now">Add new activity now</string>
    <string name="add_new_activity">new activity</string>
    <string name="offline">Off Line</string>
    <string name="online">Online</string>
    <string name="reviews">Reviews</string>
    <string name="help">Help?</string>
    <string name="skip">Skip</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="worng_phone_number">Wrong phone number ?</string>
    <string name="verify">Verify</string>
    <string name="confrim_update">resend new code in 59 seconds</string>
    <string name="phone">+999 5671611819</string>
    <string name="sendSMS">you have sent you 4 digits code via SMS for mobile number verification at .</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="emailaddress">Email address (optional)</string>
    <string name="doyouhaveregistrationcode">Do you have a registration code ?</string>
    <string name="save">Save</string>
    <string name="or">OR</string>
    <string name="profile">Profile</string>
    <string name="edityouractivityproviderprofile">Edit your activity provider profile</string>
    <string name="backtoapp">Back to back pack app</string>
    <string name="massageall">Message All</string>
    <string name="month">Month</string>
    <string name="bookings">Bookings</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="overview">Overview</string>
    <string name="activities">Activities</string>
    <string name="messages">Messages</string>
    <string name="account">Account</string>
    <string name="good">Good</string>
    <string name="cretical">Critical</string>
    <string name="data">data data data data data data data data data  data data data data data data data data data  data data data data data data data data data  data data data data data data data data data  data data data data data data data data data  data data data data data data data data data  data data data data data data data data data  data data data data data data data data data  data data data data data data data data data  data data data data data data data data data  data data data data data data data data data  data data data data data data data data data</string>
    <string name="readmore">Read More</string>
    <string name="calender">Calender</string>
    <string name="info">Info</string>
    <string name="Edit">Edit</string>
    <string name="title">Title</string>
    <string name="titleandtypeanddescription"><![CDATA[Title,Type,\n& Description.]]></string>
    <string name="Photos">Photos</string>
    <string name="add_ons">Add-on\'s</string>
    <string name="location">Location</string>
    <string name="activity_location">Activity Location</string>
    <string name="metting_point">Meeting Point Location</string>
    <string name="rulesandrequirment"><![CDATA[Rules &\nRequirements]]></string>
    <string name="activity_rules">Activity Rules :</string>
    <string name="requirments">Requirments :</string>
    <string name="Next">Next</string>
    <string name="name_you_activity">Name your Activity</string>
    <string name="Activity_Title_hint">Activity Title</string>
    <string name="name_you_activity_disc">It will appear to users as your activity name. Make it look good</string>
    <string name="type_of_activity">What’s the type of activity?</string>
    <string name="type_of_activity_disc">Make sure you choose the correct isForGroup to make it easier for users to find you.</string>
    <string name="Land">Land</string>
    <string name="water">Water</string>
    <string name="sky">Sky</string>
    <string name="Event">Event</string>
    <string name="Who_can_book_it">Who can book it?</string>
    <string name="Who_can_book_it_hint">the demography of people who can book your activity.</string>
    <string name="Describe_this_activity">Describe this activity</string>
    <string name="Describe_this_activity_hint">This discription will appear in the activity page.     write what you want people to know about this     activity.</string>
    <string name="Activity_photos">Activity photos</string>
    <string name="Activity_photos_disc">Your activity photos are going to sell it. Make sure you select some good ones. ;)</string>
    <string name="The_trip_will_include_the_following">The trip will include the following</string>
    <string name="The_trip_will_include_the_following_disc">If an add-on does not includes a price that     means it’s included for free for everyone.\nYou can tag another provider in an add-on if     it’s not provided by you.</string>
    <string name="Price">Price:</string>
    <string name="Provider">Provider:</string>
    <string name="Add_add_ons">Add add-on</string>
    <string name="add_add_ons">Add an Add-on</string>
    <string name="disc">Discription</string>
    <string name="add">Add</string>
    <string name="Activity_Title_disc">It will be displayed as an area range and not an exact location.</string>
    <string name="select_range_from_map">Select range from map</string>
    <string name="meeting_point">Where is the meeting point going to be at?</string>
    <string name="meeting_point_disc">this location will be shared with backpakers after they confirm their ticket</string>
    <string name="select_loation_from_map">Select loation from map</string>
    <string name="rules">Rules</string>
    <string name="rules_disc">No tolerance rules. must have/do. the activity could be canceled if compromised.</string>
    <string name="requirments_disc">Everything you want activity participants to know before the activity time.</string>
    <string name="requirments_hint">Requirements</string>
    <string name="booking_prefrences">Booking\nPreferences</string>
    <string name="notice_in_advance">Notice in advance</string>
    <string name="notice_in_advance_disc">At this time before the activity starts, users won’t be able to book this activity.</string>
    <string name="booking_window">Booking window</string>
    <string name="booking_window_disc">When do you want users to activity_Start booking this activity?</string>
    <string name="booking_available_for">Booking available for.</string>
    <string name="individuals_disc">Users can book this activity as                 individuals</string>
    <string name="private_Groups">Private Groups</string>
    <string name="private_Groups_disc">User can book the whole activity for their own private</string>
    <string name="availability">Availability</string>
    <string name="availability_disc1">If you add the same time for Individuals and         Private groups, you will have 2 different trips in         the same time. One for individuals and one for         Private groups.</string>
    <string name="availability_disc2">You can skip this step and do it from the activity calender if you have a spacific date</string>
    <string name="add_available_time">Add available days time</string>
    <string name="q1">activity calender if you have a specific date</string>
    <string name="q2">What is the activity_Start/end day and time?</string>
    <string name="activity_Start">Start</string>
    <string name="end">End</string>
    <string name="lengthandcapacity"><![CDATA[Length & Capacity]]></string>
    <string name="activity_length">Activity Length:</string>
    <string name="activity_length_disc">How long does this activity lasts for?</string>
    <string name="activity_capacity">Capacity</string>
    <string name="activity_capacity_disc">How many users can book this activity in the same time?</string>
    <string name="different_categories">Do you have different categories for individuals?</string>
    <string name="each_category_have_spacefic_capacity">Does each category have a specific capacity?</string>
    <string name="cpacity_number_for_activity">What is the cpacity number for this activity?</string>
    <string name="max_and_min_number_group">What’s the max and min number for private group?</string>
    <string name="pricingandpayments"><![CDATA[Pricing & Payments]]></string>
    <string name="Price_per_individual">Price per individual</string>
    <string name="Price_per_individual_disc">Based on your information, these are the categories of your activity. You can always delete or add new categories.</string>
    <string name="sr">SR</string>
    <string name="add_price_per_individual">Add price per individual</string>
    <string name="category_name">Category Name</string>
    <string name="ticket_price">Ticket Price</string>
    <string name="this_field_is_required">this field is required</string>
    <string name="price_for_private_group">Price for private group</string>
    <string name="price_for_private_group_disc">The price of the full activity for one private group.</string>
    <string name="discount_disc">You can always come back to this page and apply a discount. The discounted price will be displaied along with the original price.</string>
    <string name="discount">Discount</string>
    <string name="orgnizers">Orgnizers</string>
    <string name="orgnizer_disc">You can invite an orgnizer to help with this activity.</string>
    <string name="invite_an_orgizer">Invite an orgizer</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="admin">Admin</string>
    <string name="admin_disc">Can edit this activity, do manual bookings, confirm tickets</string>
    <string name="helper">Helper</string>
    <string name="helper_disc">Can only do manual bookings and confirm tickets</string>
    <string name="invite">Invite</string>
    <string name="confirm_tickets">Confirm Tickets</string>
    <string name="confirm_tickets_disc">By ticket No. or Scan QR-Code</string>
    <string name="cancel_tickeet">Cancel Ticket</string>
    <string name="notpaid">(Not Paid)</string>
    <string name="pay">Pay</string>
    <string name="eman">Eman</string>
    <string name="payment">Payment</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="payment_method">Payment method</string>
    <string name="cash">Cash</string>
    <string name="total">Total</string>
    <string name="paid">Paid</string>
    <string name="book_new">Book new</string>
    <string name="for_2_individules">for 2 individuals</string>
    <string name="book">Book</string>
    <string name="Date">Date</string>
    <string name="Time">Time</string>
    <string name="full_group">Full Group</string>
    <string name="full_group_disc">Check this when you want to book activity for a full group</string>
    <string name="adults">Adults (SAR 75)</string>
    <string name="childrin">Childrin (SAR 55)</string>
    <string name="child_age">6 years - 13 years</string>
    <string name="backpacker_no">backpacker No. 1</string>
    <string name="Who_is_going">Who’s going?</string>
    <string name="individual">Individual</string>
    <string name="individuals">Individuals</string>
    <string name="add_another_rule">Add another rule</string>
    <string name="continuelater">Continue \n Later</string>
    <string name="don_t_apply_radio_btn">Don\'t Apply</string>
    <string name="apply_btn">Apply</string>
    <string name="discount_desc">you can also come back to this page and apply a discount,the discount price will place be displayed along with the original price</string>
    <string name="discount_order">add a discount price next to each ticket</string>
    <string name="lang">AR</string>
    <string name="delete_activity">Delete</string>
</resources>