<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingRight="@dimen/_16sdp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingLeft="@dimen/_16sdp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold"
            android:textColor="@color/bg_color_text"
            android:text="@string/Price_per_individual"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/footer_color_text"
            android:textSize="@dimen/med_text_size"
            android:text="@string/Price_per_individual_disc"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/price_per_individual_Recycler"
            android:layout_width="match_parent"
            android:minHeight="100dp"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
        <LinearLayout
            android:id="@+id/add_price_ber_individual"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="30dp"
                android:src="@android:drawable/ic_menu_add"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_vertical"
                android:text="@string/add_price_per_individual"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/big_text_size"
            android:textColor="@color/bg_color_text"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/price_for_private_group"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:textSize="@dimen/med_text_size"
            android:textColor="@color/footer_color_text"
            android:layout_marginTop="10dp"
            android:text="@string/price_for_private_group_disc"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/group_price"
            android:backgroundTint="@color/background_transparent"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:hint="SR 100"
            android:layout_marginEnd="20dp"
            android:inputType="numberSigned"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@color/gray"
            android:layout_height="2dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="@dimen/med_text_size"
            android:textColor="@color/footer_color_text"
            android:text="@string/discount_disc"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/gray"
            android:textSize="26dp"
            android:layout_marginBottom="50dp"
            android:padding="10dp"
            android:text="@string/discount" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/footer_color_text"
            android:layout_marginBottom="@dimen/_5sdp"
            android:text="@string/discount_desc" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/radiogroup">

            <RadioButton
                android:id="@+id/not_apply_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/don_t_apply_radio_btn" />

            <RadioButton
                android:id="@+id/apply_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apply_btn"/>

        </RadioGroup>
        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discount_order" />
        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="?android:attr/listDivider" />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/discount_list"
            android:paddingBottom="@dimen/_5sdp"

            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>