<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_marginTop="@dimen/_12sdp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:paddingRight="@dimen/_16sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:textColor="#666666"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules_disc"
            android:textColor="@color/gray"
            android:textSize="@dimen/med_text_size" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rules_Recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp">

        </android.support.v7.widget.RecyclerView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:backgroundTint="@color/background_transparent"
                android:id="@+id/add_another_rule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_another_rule"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1" />

            <ImageView
                android:id="@+id/edit_text"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/edit_text" />
        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requirments"
            android:textColor="#666666"
            android:textSize="@dimen/big_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requirments_disc"
            android:textColor="@color/gray"
            android:textSize="@dimen/med_text_size" />

        <EditText
            android:backgroundTint="@color/background_transparent"
            android:id="@+id/requirements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/requirments_hint"
            android:minLines="3"/>


    </LinearLayout>

</ScrollView>