<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="@dimen/_12sdp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:paddingBottom="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notice_in_advance"
            android:textSize="@dimen/big_text_size"
            android:textColor="#666666"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/med_text_size"
            android:textColor="#BABABA"
            android:text="@string/notice_in_advance_disc"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="100"
            android:layout_height="wrap_content">
            <EditText
                android:backgroundTint="@color/background_transparent"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:text="30"
                android:textColor="@color/bg_color_text"
                android:inputType="numberSigned"
                android:id="@+id/notice_in_advance_txt"
                android:layout_height="wrap_content" />


            <Spinner
                android:layout_width="0dp"
                android:layout_weight="70"
                android:textColor="@color/bg_color_text"
                android:id="@+id/notice_in_advance_spinner"
                android:layout_height="wrap_content">

            </Spinner>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/booking_window"
            android:textSize="@dimen/big_text_size"
            android:textColor="#666666"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/med_text_size"
            android:textColor="#BABABA"
            android:text="@string/booking_window_disc"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="100"
            android:orientation="horizontal"
            android:layout_height="wrap_content">


            <EditText
                android:backgroundTint="@color/background_transparent"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:text="30"
                android:layout_gravity="center"
                android:inputType="numberSigned"
                android:textColor="@color/bg_color_text"
                android:id="@+id/booking_window_ET"
                android:layout_height="wrap_content" />
            <Spinner
                android:layout_width="0dp"
                android:layout_margin="10dp"
                android:layout_weight="70"
                android:textColor="@color/bg_color_text"
                android:layout_gravity="center"
                android:id="@+id/booking_window_spinner"
                android:layout_height="wrap_content">

            </Spinner>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/booking_available_for"
            android:textSize="@dimen/big_text_size"
            android:textColor="#666666"
            android:textStyle="bold"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/individuals"
            android:textSize="@dimen/med_text_size"
            android:textColor="#666666"
            android:id="@+id/individual_box"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:padding="10dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/user"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/individuals_disc"
                android:textSize="@dimen/med_text_size"
                android:textColor="#BABABA"

                />
        </LinearLayout>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/private_box"
            android:text="@string/private_Groups"
            android:textSize="@dimen/med_text_size"
            android:textColor="#666666"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:padding="5dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/private_group_icon"
                android:layout_height="match_parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/private_Groups_disc"
                android:textSize="@dimen/med_text_size"
                android:textColor="#BABABA"

                />
        </LinearLayout>



    </LinearLayout>

</ScrollView>